<resources>
    <string name="app_name">JumpTube</string>
    <string name="app_version">Version 1.0.5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_get_permission">Permit to Draw over other apps</string>
    <string name="string_get_permission">Allow this app to draw over other apps. This permission allows an app to display on the top of other apps you\'re using.</string>
    <string name="repeat_type">REPEAT_TYPE</string>
    <string name="no_of_repeats">NO_OF_REPEATS</string>
    <string name="player_type">PLAYER_TYPE</string>
    <string name="init">INITIALIZED</string>
    <string name="search">search</string>
    <string name="search_hint">Search YouTube</string>
    <string name="videoQuality">VIDEO_QUALITY</string>
    <string name="finishOnEnd">FINISH_ON_END</string>

    <!--Hint-->
    <string name="get_permission">Get Permission</string>
    <string name="press_again_to_exit">Press again to exit this application</string>
    <string name="no_internet_connection">Your internet can not available\nPlease check your internet connection</string>
    <string name="desktop_not_support">Desktop view unavailable</string>
    <string name="need_permission">You need to grant the permission</string>
    <string name="check_internet">Please check your network</string>
    <string name="load_error">Load this page failed</string>
    <string name="unStart">This feature has not been started</string>
    <string name="version_available">Latest version available</string>
    <string name="version_available_detail">Would you want to download it?</string>
    <string name="loading">Loading...</string>
    <string name="video_open">Video is staring...</string>

    <!--Common-->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sticker_size">Sticker Size</string>
    <string name="video_size">Video Size</string>
    <string name="video_quality">Video Quality</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="done">Done</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="version">Version</string>
    <string name="forward">Forward</string>
    <string name="open">Open</string>
    <string name="home">Home Page</string>
    <string name="trending">Tredning Page</string>
    <string name="account">Account Page</string>
    <string name="update_now">Update Now</string>
    <string name="later">Later</string>
    <string name="video_size_full">Full</string>
    <string name="video_size_large">Large</string>
    <string name="video_size_medium">Medium</string>
    <string name="video_size_small">Small</string>
    <string name="sticker_size_large">Large</string>
    <string name="sticker_size_medium">Medium</string>
    <string name="sticker_size_small">Small</string>
    <string name="sticker_size_disappear">Disappear</string>
    <string name="video_forward_10">Video forward 10 seconds</string>
    <string name="video_backward_10">Video backward 10 seconds</string>
    <string name="copy_data_is_youtube">Your copy data is Youtube URL.\nWould you wnat to open it by Jumptube?</string>

    <!--Settings-->
    <string name="general_settings">General Settings</string>
    <string name="learn_more">Developer info</string>

</resources>
